--- a/js/pages/card/detail.html
+++ b/js/pages/card/detail.html
@@ -2,25 +2,25 @@
 <div class="swiper-container swiper ms-controller" ms-controller="detail">
     <div class="swiper-wrapper">
 
-        <div class="swiper-slide bs-text-white bs-text-smaller" :for="el in @data" data-for-rendered="@swiper">
+        <div class="swiper-slide bs-text-white bs-text-smaller" :for="(index,el) in @data" data-for-rendered="@swiper">
             <div style="display: flex; justify-content: space-between;width: 100%;">
                 <div class="bs-text-smaller bs-text-white">
-                    {{el.name}}会员
+                    {{el.userBuyCard.name}}会员
                 </div>
                 <div class="bs-text-x-smaller bs-text-white">
                     卡号: 
-                    <span style="margin-right: 3px;">{{el.cardNo.slice(0,4)}}</span>
-                    <span style="margin-right: 3px;">{{el.cardNo.slice(4,8)}}</span>
-                    <span style="margin-right: 3px;">{{el.cardNo.slice(8,13)}}</span>
+                    <span style="margin-right: 3px;">{{el.userBuyCard.cardNo.slice(0,4)}}</span>
+                    <span style="margin-right: 3px;">{{el.userBuyCard.cardNo.slice(4,8)}}</span>
+                    <span style="margin-right: 3px;">{{el.userBuyCard.cardNo.slice(8,13)}}</span>
                 </div>
             </div>
             
             <div style="width: 100%;">
                 <div style="display: flex;justify-content: flex-end;height: 25px; width: 100%;">
-                    <img src="img/card/card_log.svg" alt="" style="width: 18.5px;" :on-tap="@goLog">
+                    <img src="img/card/card_log.svg" alt="" style="width: 18.5px;" :on-tap="@goLog(index)">
                 </div>
                 <div style="margin-bottom: 15vw;">
-                    <div class="bs-text-xx-larger bs-text-gold bs-text-bolder">{{el.account}}</div>
+                    <div class="bs-text-xx-larger bs-text-gold bs-text-bolder">{{el.accountAmount}}</div>
                     <div class="bs-text-x-smaller" style="padding-top: 0.6vh;">
                         账户余额
                     </div>
@@ -29,18 +29,18 @@
 
             <div style="margin-bottom: 10vw;">
                 <div class="bs-text-larger bs-text-gold">
-                    {{el.cash}}
+                    {{el.cashAmount}}
                 </div>
                 <div class="bs-text-x-smaller" style="padding-top: 0.6vh;">
                     可提现余额
                 </div>
-                <button type="button" class="bs-text-gold bs-text-large cash-btn">提现</button>
+                <button type="button" class="bs-text-gold bs-text-large cash-btn" :on-tap="@openWithdraw(index)">提现</button>
             </div>
 
             <div style="display: flex; justify-content: space-around;width: 100%;">
                 <div>
                     <div class="bs-text-larger bs-text-gold">
-                        {{el.award}}
+                        {{el.totalReturnAmount}}
                     </div>
                     <div class="bs-text-x-smaller" style="padding-top: 1.2vh;">
                         返现累计
@@ -48,7 +48,7 @@
                 </div>
                 <div>
                     <div class="bs-text-larger bs-text-gold">
-                        {{el.promote}}
+                        {{el.totalAwardAmount}}
                     </div>
                     <div class="bs-text-x-smaller" style="padding-top: 1.2vh;">
                         推广奖励累计
