发现页面修改

--- a/js/pages/discover/discover.html
+++ b/js/pages/discover/discover.html
@@ -78,35 +78,16 @@
         </div>
     </div>
 </div>
-<div id="infoPage" class="mui-page">
-    <div class="mui-page-content bs-text-small">
-        <ul class="mui-table-view">
-            <li class="mui-table-view-cell">
-                <a href="user-invite.html" class="mui-navigate-right">
-                    <span class="bs-text-small nav-title">获取体验基金</span>
-                </a>
-            </li>
-        </ul>
-        <ul class="mui-table-view">
-            <li class="mui-table-view-cell">
-                <a href="promotion-apply.html" class="mui-navigate-right">
-                    <span class="bs-text-small nav-title">本宿推广大使</span>
-                </a>
-            </li>
-        </ul>
-        <ul class="mui-table-view" style="margin-top: 6px;">
-            <li class="mui-table-view-cell">
-                <a href="special.html" class="mui-navigate-right">
-                    <span class="bs-text-small nav-title">午夜特价房</span>
-                </a>
-            </li>
-        </ul>
-        <ul class="mui-table-view" style="margin-top: 100px;">
-            <li class="mui-table-view-cell">
-                <a href="about.html" class="mui-navigate-right">
-                    <span class="bs-text-small nav-title">关于我们</span>
-                </a>
-            </li>
-        </ul>
+<div id="infoPage" class="mui-page" style="padding-top: 0;">
+    <div>
+        <a href="user-invite.html" style="display: flex; justify-content: center; align-items: center; height: 33.33vh; width: 100%; background-size: cover; background-image:url(img/getFund.jpg)">
+            <div class="bs-text-x-larger bs-text-white" style="text-shadow:1px 1px 0 #000,0 0 90px #ff00de;">获取体验基金</div>
+        </a>
+        <a href="promotion-apply.html" style="display: flex; justify-content: center; align-items: center; height: 33.33vh; width: 100%; background-size: cover; background-image:url(img/generalize.jpg)">
+            <div class="bs-text-x-larger bs-text-white" style="text-shadow:1px 1px 0 #000,0 0 90px #10c517;">本宿推广大使</div>
+        </a>
+        <a href="about.html" style="display: flex; justify-content: center; align-items: center; height: 33.33vh; width: 100%; background-size: cover; background-image:url(img/aboutUs.jpg)">
+            <div class="bs-text-x-larger bs-text-white" style="text-shadow:1px 1px 0 #000,0 0 50px #ff9530;">关于我们</div>
+        </a>
     </div>
 </div>
