--- a/js/util/pop.html
+++ b/js/util/pop.html
@@ -9,7 +9,7 @@
             <!-- <div class="bs-text-large" style="font-weight: lighter;padding-bottom: 10px;">{{nickName}}</div> -->
             <!-- 会员卡 -->
             <div style="padding-bottom: 5px;">
-                <img ms-repeat="cardList" ms-attr-src="el.img" style="width:22px;" ms-css-margin-right="$index==0?'12px':''" alt="" ms-on-tap="goCard(el.cid)">
+                <img ms-repeat="cardList" ms-attr-src="el.img" style="width:22px;" ms-css-margin-right="$index==0?'12px':''" alt="" ms-on-tap="goCard(el.id)">
             </div>
         </div>
 
