--- a/js/pages/discover/discover.html
+++ b/js/pages/discover/discover.html
@@ -1,93 +1,22 @@
 <style>
-    .mui-views,
-    .mui-view,
-    .mui-pages,
-    .mui-page,
-    .mui-page-content {
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
+    a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 33.33vh;
         width: 100%;
-        height: 100%;
-        font-weight: 300;
-        padding-top: 10px;
-        background-color: #efeff4;
-    }
-    .mui-pages {
-        height: auto;
-    }
-    .mui-page.mui-transitioning {
-        -webkit-transition: -webkit-transform 300ms ease;
-        transition: transform 300ms ease;
-    }
-    /*.mui-page-left {
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-    }
-    .mui-ios .mui-page-left {
-        -webkit-transform: translate3d(-20%, 0, 0);
-        transform: translate3d(-20%, 0, 0);
-    }
-    .mui-page-shadow {
-        position: absolute;
-        right: 100%;
-        top: 0;
-        width: 16px;
-        height: 100%;
-        z-index: -1;
-        content: '';
-    }
-    .mui-page-shadow {
-        background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, .01) 50%, rgba(0, 0, 0, .2) 100%);
-        background: linear-gradient(to right, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, .01) 50%, rgba(0, 0, 0, .2) 100%);
-    }*/
-    .mui-page {
-        display: none;
-    }
-    .mui-pages .mui-page {
-        display: block;
-    }
-    .mui-page .mui-table-view:first-child {
-        margin-bottom: 5px;
-        border: 0;
-    }
-    .mui-page .mui-table-view:last-child {
-        margin-top: 100px;
-    }
-    .nav-title{
-        display: inline-block;
-        width: 80px;
-        margin: 5px auto;
-    }
-    .mui-table-view:before {
-        background-color: transparent;
-    }
-
-    .mui-table-view:after {
-        background-color: transparent;
-    }
-    div ul li {
-        padding: 9px 15px;;
+        background-size: cover; 
     }
 </style>
-<div id="app" class="mui-views">
-    <div class="mui-view">
-        <div class="mui-pages">
-        </div>
-    </div>
+<div>
+    <a href="user-invite.html" style="background-image:url(img/getFund.jpg)">
+        <div class="bs-text-x-larger bs-text-white" style="text-shadow:1px 1px 0 #000,0 0 90px #ff00de;">获取体验基金</div>
+    </a>
+    <a href="###" onclick="goPromotion()" style="background-image:url(img/generalize.jpg)">
+        <div class="bs-text-x-larger bs-text-white" style="text-shadow:1px 1px 0 #000,0 0 90px #10c517;">本宿推广大使</div>
+    </a>
+    <a href="about.html" style="background-image:url(img/aboutUs.jpg)">
+        <div class="bs-text-x-larger bs-text-white" style="text-shadow:1px 1px 0 #000,0 0 50px #ff9530;">关于我们</div>
+    </a>
 </div>
-<div id="infoPage" class="mui-page" style="padding-top: 0;">
-    <div>
-        <a href="user-invite.html" style="display: flex; justify-content: center; align-items: center; height: 33.33vh; width: 100%; background-size: cover; background-image:url(img/getFund.jpg)">
-            <div class="bs-text-x-larger bs-text-white" style="text-shadow:1px 1px 0 #000,0 0 90px #ff00de;">获取体验基金</div>
-        </a>
-        <a href="promotion-apply.html" style="display: flex; justify-content: center; align-items: center; height: 33.33vh; width: 100%; background-size: cover; background-image:url(img/generalize.jpg)">
-            <div class="bs-text-x-larger bs-text-white" style="text-shadow:1px 1px 0 #000,0 0 90px #10c517;">本宿推广大使</div>
-        </a>
-        <a href="about.html" style="display: flex; justify-content: center; align-items: center; height: 33.33vh; width: 100%; background-size: cover; background-image:url(img/aboutUs.jpg)">
-            <div class="bs-text-x-larger bs-text-white" style="text-shadow:1px 1px 0 #000,0 0 50px #ff9530;">关于我们</div>
-        </a>
-    </div>
-</div>
+
