--- a/js/pages/card/card-withdraw.html
+++ b/js/pages/card/card-withdraw.html
@@ -6,6 +6,7 @@
         transition: margin-top 100ms;
         background: #fff;
         overflow-y: auto;
+        position: relative;
     }
 
     .pop-content input {
@@ -17,17 +18,25 @@
         border-bottom: solid 1px #ccc;
         text-align: center;
     }
+
+    .icon-close {
+        width: 55px;
+        padding: 20px 20px;
+        left: 20px;
+        position: relative;
+    }
 </style>
 <div class="pop-content bs-text-51" :controller="withdraw">
-    <div style="background-color: #eee;padding: 20px;">
+    <div style="background-color: #eee;padding: 0 20px 20px 20px;">
         <div style="text-align: right;">
-            <img src="img/close.svg" style="width: 15px;" alt="" :on-tap="@close">
+            <img src="img/close.svg" class="icon-close" alt="" :on-tap="@close">
         </div>
-        <div class="bs-text-larger bs-text-51" style="margin-top: 20px;">
+        <div class="bs-text-larger bs-text-51" style="">
             提现金额
         </div>
         <div class="bs-text-xx-larger" style="display: inline-block;">¥</div>
         <input class="bs-text-xx-larger" type="tel" :duplex="@cash">
         <div class="bs-text-x-smaller" style="margin-top: 5px;">可提现余额 {{@cashAmount}} 元</div>
     </div>
+    <div class="bs-text-x-smaller bs-text-153" style="position: absolute;bottom: 0;padding: 10px 20px;">提现金额会在3～5个工作日到账</div>
 </div>
