--- a/js/pages/card/detail.html
+++ b/js/pages/card/detail.html
@@ -3,7 +3,7 @@
     <div class="swiper-wrapper">
 
         <div class="swiper-slide bs-text-white bs-text-smaller" :for="(index,el) in @data" data-for-rendered="@renderSwiper">
-            <div style="display: flex; justify-content: space-between;width: 100%;">
+            <div style="display: flex; justify-content: space-between;width: 100%;" :class="el.id?'':'hidden'">
                 <div class="bs-text-smaller bs-text-white">
                     {{el.userBuyCard.name}}会员
                 </div>
@@ -17,7 +17,7 @@
             
             <div style="width: 100%;">
                 <div style="display: flex;justify-content: flex-end;height: 25px; width: 100%;">
-                    <img src="img/card/card_log.svg" alt="" style="width: 18.5px;" :on-tap="@goLog(index)">
+                    <img src="img/card/card_log.svg" alt="" style="width: 18.5px;" :on-tap="@goLog(index)" :if="el.accountAmount>0">
                 </div>
                 <div style="margin-bottom: 15vw;">
                     <div class="bs-text-xx-larger bs-text-gold bs-text-bolder">{{el.accountAmount}}</div>
@@ -34,21 +34,27 @@
                 <div class="bs-text-x-smaller" style="padding-top: 0.6vh;">
                     可提现余额
                 </div>
-                <button type="button" class="bs-text-gold bs-text-large cash-btn" :on-tap="@openWithdraw(index)">提现</button>
+                <button type="button" class="bs-text-gold bs-text-large cash-btn" :on-tap="@openWithdraw(index, el.cashAmount)">提现</button>
             </div>
 
             <div style="display: flex; justify-content: space-around;width: 100%;">
                 <div>
-                    <div class="bs-text-larger bs-text-gold">
+                    <div :if="el.accountAmount>0" class="bs-text-larger bs-text-gold">
                         {{el.totalReturnAmount}}
+                    </div>
+                    <div :if="el.accountAmount==0" class="bs-text-larger bs-text-gold" :on-tap="@goCardList">
+                        去充值
                     </div>
                     <div class="bs-text-x-smaller" style="padding-top: 1.2vh;">
                         返现累计
                     </div>
                 </div>
                 <div>
-                    <div class="bs-text-larger bs-text-gold">
+                    <div :if="el.packageStatus==2" class="bs-text-larger bs-text-gold">
                         {{el.totalAwardAmount}}
+                    </div>
+                    <div :if="el.packageStatus==1" class="bs-text-larger bs-text-gold" :on-tap="@goPromotion(index)">
+                        去开通
                     </div>
                     <div class="bs-text-x-smaller" style="padding-top: 1.2vh;">
                         推广奖励累计
