--- a/js/pages/promotion/apply.html
+++ b/js/pages/promotion/apply.html
@@ -9,7 +9,7 @@
                 住本宿也能赚钱
             </div>
             <div class="bs-text-larger" style="line-height: 24px;">
-                成为本宿推广大使，与朋友分享你在本宿的难忘体验，即可获得本宿推广现金奖励。
+                成为本宿推广大使，与朋友分享你在本宿的难忘体验，即可获得本宿推广现金奖励。推广奖励可用于本宿平台消费或直接提现。
             </div>
         </div>
         <div class="bs-text-normal" style="padding: 25px 0;" :on-tap="@clickIsAgree">
