条款页面更新样式和内容

--- a/js/pages/card/card-rule.html
+++ b/js/pages/card/card-rule.html
@@ -1,41 +1,52 @@
-<style>
-.content-rule{
-    height: 80vh;
-    margin-left: auto;
-    margin-right: auto;
-    transition: margin-top 100ms;
-    background: #fff;
-    overflow-y: auto;
-}
-.content-rule li {
-    font-size: 15px;
-}
-.content-rule li p{
-    font-size: 12px;
-    color: #000;
-}
-</style>
-<div class="content-rule bs-text-black">
-    <div class="mui-content-padded" style="padding: 10px;">
-        <div class="bs-text-x-larger bs-text-51 bs-text-bolder">
-            本宿会员条款
-        </div>
-        <ol>
-            <li>
-                任何人都可以邀请好友
-                <p>任何用户登录INI后都可以邀请朋友免费赚取约会基金， 不需要在INI进行消费</p>
-            </li>
-            <li>
-                获得和兑换约会优惠
-                <p>每次消费后，会累积约会基金，可用于以后的消费，或 者用于兑换优惠卷。</p>
-            </li>
-            <li>合格预订</li>
-            <li>多个邀请</li>
-            <li>时间性
-                <p>我们有权暂停您的账户并删除邀请以确保不出现滥用 该服务。</p>
-                <p>只有完成的消费，才会有约会基金 该活动旨在有限的时间内有效，后续会进行调整。</p>
-                <p>在进行多个好友邀请时，在该链接进入INI并登陆后，你 将会获得约会基金。</p>
-            </li>
-        </ol>
+<div class="content-rule">
+    <div class="content-headtitle">
+        本宿会员条款
+    </div>
+    <div class="content-text">在预存金额前，敬请阁下阅读以下内容，在进行预存过程中完成预存支付即表示您完全接受本宿所制定的会员条款的全部条款。</div>
+    <div class="content-title">第一条 会员资格</div>
+    <div class="content-text">1. 在您承诺完全同意本服务条款，并在本网站完成注册程序后，即可成为本宿会员，享受本协议第五条中所表述的会员权益并承担相关的义务。如您拒绝本协议中的任何一条条款，则视为放弃会员所能享受的所有权益。</div>
+    <div class="content-title">第二条 会员权限</div>
+    <div class="content-text">1. 所有会员需遵守《本宿用户协议》中的条款才能享受相关权益。
+    </div>
+    <div class="content-text">2. 所有会员均有义务遵守本协议的条款规定及其他网络服务的协议、规定、程序及惯例。
+    </div>
+    <div class="content-title">第三条 会员资料</div>
+    <div class="content-text">1. 为了使我们能够更好地为会员提供服务，请您提供详尽准确的个人资料，如有更改时请及时更新，提供虚假资料所造成的后果及损失由会员自行承担。
+    </div>
+    <div class="content-text">2. 会员有责任和义务保管好自己的本宿账号，由于会员疏忽所造成的损失由会员承担。会员应当对以其用户账号进行的所有活动和事件负法律责任。
+    </div>
+    <div class="content-title">第四条 会员权益</div>
+    <div class="content-text">1. 会员预存金额的额度将决定用户成为何种级别的会员，会员有效期在12个月（每月以30天计算）。
+    </div>
+    <div class="content-text">2. 在会员有效期内，黑卡会员，入住本宿酒店时享受 7.5折优惠；金卡会员入住本宿酒店时享受8折优惠；银卡会员入住本宿酒店时享受8.8折优惠。享受折扣范围仅限于全天房服务及时租房服务。
+    </div>
+    <div class="content-text">3. 本宿每月（以30天计算）将会返还用户一部份预存金额，黑卡会员返还3000元，金卡用户返还900元，银卡用户返还300元。
+    </div>
+    <div class="content-text">4. 本宿返还给会员的金额，会员可以用来提现或是在本宿酒店中消费。会员的提现账号应保证真实有效，如因会员绑定账号所造成的包括但不仅限于无法提现，打款账号错误等一些列损失，本宿概不负责。会员每月仅可提现1次。
+    </div>
+    <div class="content-text">5. 本宿会员享受免审核开通推广奖励活动，活动规则详见《推广条例》。
+    </div>
+    <div class="content-title">第五条 会员资格的取消</div>
+    <div class="content-text">如发现会员有以下任何故意行为之一的，本宿会保留取消其会员资格并无需做出任何补偿： </div>
+    <div class="content-text">1. 以任何非正规途径获得的会员资格。 在“本宿”旗下所有网站或实体酒店内从事非法商业行为，发布涉及敏感政治、宗教、色情或其它违反有关国家法律和政府法规的文字、图片等信息。
+    </div>
+    <div class="content-text">2. 其他直接或间接损害“本宿”利益并造成损失的行为。
+    </div>
+    <div class="content-title">第六条 本宿的权利</div>
+    <div class="content-text">1. 有权审核、接受或拒绝会员的入会申请，在事先通知会员的情况下有权撤销或停止会员的全部或部分服务内容。
+    </div>
+    <div class="content-text">2. 有权修订会员手册中表述的会员权利及义务，修订后将通知会员，在通知发出后会员仍继续行驶会员权利的即表示会员同意并遵守新修订的内容。
+    </div>
+    <div class="content-text">3. 会员所享受的权益仅供会员本人及本协议第五条中表述的范围内使用，未经本宿许可，会员不得将会员账号授予或转让给第三方，否则本宿保留取消该会员的账号的权力。
+    </div>
+    <div class="content-title">第七条 免责条款</div>
+    <div class="content-text">1. 本宿将在技术条件许可的范围内保障会员资料，如遇不可抗力的原因造成资料丢失，本宿将尽力恢复历史数据，但不对已损失部分承担任何补偿义务。
+    </div>
+    <div class="content-text">2. 本宿不承担因会员账户遗失或泄漏而受到的一切损失。
+    </div>
+    <div class="content-title">第八条 附则</div>
+    <div class="content-text">1. 会员因违反以上条款而触犯有关法律法规，一切后果由会员本人承担，本宿不承担相关责任和与此有关的经济损失。
+    </div>
+    <div class="content-text">2. 本协议未涉及的问题可参见国家相关法律法规，当本协议条款与有关法律法规冲突时，以相关法律法规为准。在本协议规定的范围内，本宿拥有最终解释权。
     </div>
 </div>
