--- a/js/pages/discover/discover.html
+++ b/js/pages/discover/discover.html
@@ -13,7 +13,7 @@
         <div class="bs-text-x-larger bs-text-white" style="text-shadow:1px 1px 0 #000,0 0 90px #ff00de;">获取体验基金</div>
     </a>
     <a href="###" onclick="goPromotion()" style="background-image:url(img/generalize.jpg)">
-        <div class="bs-text-x-larger bs-text-white" style="text-shadow:1px 1px 0 #000,0 0 90px #10c517;">本宿推广大使</div>
+        <div class="bs-text-x-larger bs-text-white" style="text-shadow:1px 1px 0 #000,0 0 90px #10c517;">本宿推广奖励</div>
     </a>
     <a href="about.html" style="background-image:url(img/aboutUs.jpg)">
         <div class="bs-text-x-larger bs-text-white" style="text-shadow:1px 1px 0 #000,0 0 50px #ff9530;">关于我们</div>
