--- a/js/pages/promotion/detail.html
+++ b/js/pages/promotion/detail.html
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                     
-                    <div class="bs-text-gold" style="order: 3;" :on-tap="@openRule">本宿推广大使条例</div>
+                    <div class="bs-text-gold" style="order: 3;" :on-tap="@openRule">本宿推广奖励条例</div>
                 </section>
             </div>
 
