--- a/js/pages/promotion/promotion-rule.html
+++ b/js/pages/promotion/promotion-rule.html
@@ -1,39 +1,35 @@
-<style>
-.content-rule{
-    height: 80vh;
-    margin-left: auto;
-    margin-right: auto;
-    transition: margin-top 100ms;
-    background: #fff;
-    overflow-y: auto;
-}
-.content-rule li {
-    font-size: 15px;
-}
-.content-rule li p{
-    font-size: 12px;
-    color: #000;
-}
-</style>
-<div class="content-rule bs-text-black">
-    <div class="mui-content-padded" style="padding: 1rem;">
-        <h4>推荐条款细则：</h4>
-        <ol>
-            <li>
-                任何人都可以邀请好友
-                <p>任何用户登录INI后都可以邀请朋友免费赚取约会基金， 不需要在INI进行消费</p>
-            </li>
-            <li>
-                获得和兑换约会优惠
-                <p>每次消费后，会累积约会基金，可用于以后的消费，或 者用于兑换优惠卷。</p>
-            </li>
-            <li>合格预订</li>
-            <li>多个邀请</li>
-            <li>时间性
-                <p>我们有权暂停您的账户并删除邀请以确保不出现滥用 该服务。</p>
-                <p>只有完成的消费，才会有约会基金 该活动旨在有限的时间内有效，后续会进行调整。</p>
-                <p>在进行多个好友邀请时，在该链接进入INI并登陆后，你 将会获得约会基金。</p>
-            </li>
-        </ol>
+<div class="content-rule">
+    <div class="content-headtitle">推广奖励条例</div>
+    <div class="content-title">第一条 活动规则</div>
+    <div class="content-text">1. 用户申请加入本宿推广会员后，即可开通推广套餐。
     </div>
+    <div class="content-text">2. 用户完成推广套餐每月推广任务即可获得推广奖励，推广任务为转发本宿相关内容到自己的朋友圈，内容可以采用本宿提供的，也可以自己编辑。
+    </div>
+    <div class="content-text">3. 用户完成本月转发任务后，需点击完成任务按钮，本宿审核后即可发放推广奖励。
+    </div>
+    <div class="content-text">4. 套餐有效期为开通之日起至12个月后结束。
+    </div>
+    <div class="content-title">第二条 套餐类型</div>
+    <div>本宿提供以下可选推广套餐。
+    </div>
+    <div class="content-text">1. 类型A，每月转发三次以上本宿相关内容到自己的朋友圈，内容可以采用本宿提供的，也可以自己编辑。
+    </div>
+    <div class="content-text">2. 类型B，每月转发两次以上本宿相关内容到自己的朋友圈，内容可以采用本宿提供的，也可以自己编辑。
+    </div>
+    <div class="content-text">3. 类型C，每月转发一次以上本宿相关内容到自己的朋友圈，内容可以采用本宿提供的，也可以自己编辑。
+    </div>
+    <div class="content-title">第三条 用户权益</div>
+    <div class="content-text">1. 用户通过完成套餐任务后所得的推广奖励，可用于提现或在本宿酒店消费。
+    </div>
+    <div class="content-title">第四条 本宿权利</div>
+    <div class="content-text">1. 有权审核、接受或拒绝会员的，在事先通知会员的情况下有权撤销或停止会员的全部或部分服务内容。
+    </div>
+    <div class="content-text">2. 有权根据用户而给予不同可选择的推广套餐。
+    </div>
+    <div class="content-text">3. 有权因用户转发内容与本宿不相关，或是损坏本宿或第三方权益而判定无效并保留申诉权利。
+    </div>
+    <div class="content-text">4 有权修订会员手册中表述的会员权利及义务，修订后将通知会员，在通知发出后会员仍继续行驶会员权利的即表示会员同意并遵守新修订的内容。
+    </div>
+    <div class="content-text">5. 会员所享受的权益仅供会员本人及本协议第五条中表述的范围内使用，未经本宿许可，会员不得将会员账号授予或转让给第三方，否则本宿保留取消该会员的账号的权力。</div>
+    <div class="content-text">6. 本活动最终解释权归本宿所有。</div>
 </div>
