--- a/js/pages/card/detail.html
+++ b/js/pages/card/detail.html
@@ -53,7 +53,7 @@
                     <div :if="el.packageStatus==2" class="bs-text-larger bs-text-gold">
                         {{el.totalAwardAmount}}
                     </div>
-                    <div :if="el.packageStatus==1" class="bs-text-larger bs-text-gold" :on-tap="@goPromotion(index)">
+                    <div :if="el.packageStatus==1||el.accountAmount==0" class="bs-text-larger bs-text-gold" :on-tap="@goPromotion(index)">
                         去开通
                     </div>
                     <div class="bs-text-x-smaller" style="padding-top: 1.2vh;">
