--- a/js/pages/order/order.html
+++ b/js/pages/order/order.html
@@ -160,7 +160,7 @@ input[type=checkbox] {
                 </div>
                 <span class="bs-text-normal bs-text-black">钱包支付</span>
             </div>
-            <div ms-click="selectPayType(2)" style="margin-bottom: 10px;">
+            <div ms-if="isweixin" ms-click="selectPayType(2)" style="margin-bottom: 10px;">
                 <div class="hiddenbox">
                     <div class="check-icon" ms-class-1="unchecked:payType!=2" ms-class-2="checked:payType==2" style="position: absolute; right: 5px;"></div>
                 </div>
