--- a/js/pages/promotion/apply.html
+++ b/js/pages/promotion/apply.html
@@ -1,6 +1,6 @@
 <div style="display: flex;flex-direction: column; justify-content: space-between;height: 100vh;" class="ms-controller" :controller="apply">
     <section style="width: 100vw; height: 225px;background-image: url(img/promote_head.jpg);background-size: cover;background-position: center center;">
-        <div class="bs-text-x-larger bs-text-white" style="font-weight: bolder;padding: 25px 20px;">本宿推广大使计划</div>
+        <div class="bs-text-x-larger bs-text-white" style="font-weight: bolder;padding: 25px 20px;">本宿推广奖励计划</div>
     </section>
 
     <section class="bs-bg-white" style="flex-grow: 1;padding: 0 20px;display: flex;flex-direction: column; justify-content: space-between;">
@@ -9,12 +9,12 @@
                 住本宿也能赚钱
             </div>
             <div class="bs-text-larger" style="line-height: 24px;">
-                成为本宿推广大使，与朋友分享你在本宿的难忘体验，即可获得本宿推广现金奖励。推广奖励可用于本宿平台消费或直接提现。
+                加入本宿推广奖励计划，与朋友分享你在本宿的难忘体验，即可获得本宿推广现金奖励。推广奖励可用于本宿平台消费或直接提现。
             </div>
         </div>
         <div class="bs-text-normal" style="padding: 25px 0;" :on-tap="@clickIsAgree">
             <span :class="['isAgree', @isAgree?'checked':'unchecked']"></span> 我同意
-            <span class="bs-text-gold" :on-tap="@openRule">本宿推广大使条例</span>
+            <span class="bs-text-gold" :on-tap="@openRule">本宿推广奖励条例</span>
         </div>
     </section>
 
