--- a/js/pages/register/agreement.html
+++ b/js/pages/register/agreement.html
@@ -1,76 +1,110 @@
-<style>
-    .popover-content p {
-        color: black;
-    }
-</style>
-<div class="content-rule bs-text-black bs-bg-white" style="height: 80vh;overflow-y: auto;">
-    <div class="mui-content-padded" style="padding: 1rem;">
-        <h4>本酒店用户协议</h4>
-            <li>
-                1. 服务条款的确认和接纳
-                <p>本酒店会员预订服务的所有权和运作权归上海因艾网络技术有限公司所有。所提供的会员预订服务必须按照其发布的公司章程，服务条款和操作规则严格执行。会员通过完成注册程序并点击一下“确定注册”的按钮，这表示会员与上海因艾网络技术有限公司达成协议并接受所有的会员预订服务条款。</p>
-            </li>
-            <li>
-                2. 服务简介
-                <p>上海因艾网络技术有限公司运用自己的操作系统通过国际互联网络为会员提供会员预订服务。会员必须：提供设备，包括个人电脑一台、调制解调器一个及配备上网装置。个人上网和支付与此服务有关的电话费用。考虑到会员服务的重要性，会员同意：提供及时、详尽及准确的个人资料。不断更新注册资料，符合及时、详尽准确的要求。所有原始键入的资料将引用为注册资料。另外，会员可授权上海因艾网络技术有限公司向第三方透露其基本资料，但上海因艾网络技术有限公司不能公开会员的补充资料。除非：会员要求上海因艾网络技术有限公司或授权某人通过电子邮件服务透露这些信息。相应的法律要求及程序要求上海因艾网络技术有限公司提供会员的个人资料。 如果会员提供的资料不准确，上海因艾网络技术有限公司保留结束会员使用本酒店会员预订服务的权利。会员在享用本酒店会员预订服务的同时，同意接受本酒店会员预订服务提供的各类信息服务。</p>
-            </li>
-            <li>3. 服务条款的修改
-            <p>上海因艾网络技术有限公司会在必要时修改本酒店会员预订服务条款，本酒店会员预订服务条款一旦发生变动，将在会员说明或会员公告中通知，而无需另行通知会员。</p>
-            </li>
-            <li>4. 服务修订
-            <p>上海因艾网络技术有限公司保留随时修改或中断会员预订服务而不需知照会员的权利。上海因艾网络技术有限公司行使修改或中断会员预订服务的权利，不需对会员或第三方负责。</p>
-            </li>
-            <li>5. 会员隐私制度
-            <p>尊重会员个人隐私是上海因艾网络技术有限公司的一项基本政策。所以，作为对以上第二点个人注册资料分析的补充，上海因艾网络技术有限公司不会公开、编辑或透露会员的补充资料及保存在本酒店会员预订服务中的非公开内容，除非有法律许可要求或上海因艾网络技术有限公司在诚信的基础上认为透露这些信件在以下三种情况是必要的：遵守有关法律规定，遵从本酒店会员合法服务程序，保持本酒店的商标所有权。在紧急情况下竭力本酒店会员个人和社会大众的隐私安全，符合其他相关的要求。</p>
-            </li>
-            <li>6. 会员的帐号，密码和安全性
-            <p>你一旦注册成功成为会员，你将得到一个帐号（该账号为你的注册手机号，密码为手机验证码）。如果你不保管好自己的帐号和手机安全，将负全部责任。另外，每个会员都要对其帐户中的所有活动和事件负全责。 会员若发现任何非法使用会员帐号或安全漏洞的情况，立即通告上海因艾网络技术有限公司，在通告前发生损失由会员个人自行承担全部责任。</p>
-            </li>
-            <li>7. 拒绝提供担保
-            <p>会员明确同意邮件服务的使用由会员个人承担风险。上海因艾网络技术有限公司明确表示不提供任何类型的担保，不论是明确的或隐含的。上海因艾网络技术有限公司不担保本酒店会员预订服务一定能满足会员的要求，也不担保会员预订服务不会受中断，对会员预订服务的及时性，安全性，出错发生都不作担保。上海因艾网络技术有限公司拒绝提供任何担保，包括信息能否准确，及时，顺利的传送。会员理解并接受任何信息资料(下载或通过本酒店会员预订服务取得)，取决于会员自己并由其承担系统受损或资料丢失的所有风险和责任。会员不会从上海因艾网络技术有限公司收到口头或书写的意见或信息，也不会在这里作明确担保。</p>
-            </li>
-            <li>8. 有限责任
-            <p>上海因艾网络技术有限公司对任何直接、间接、偶然、特殊及继起的损害不负责任，这些损害来自：不正当使用本酒店会员预订服务，非法使用会员预订服务或会员传送的信息有所变动。这些损害会导致维也上海因艾网络技术有限公司受损，所以上海因艾网络技术有限公司早已提出这种损害的可能性并在此重申这种损害可能。</p>
-            </li>
-            <li>9. 本酒店会员预订服务信息的储存及限制
-            <p>上海因艾网络技术有限公司不对会员所发布信息的删除或储存失败负责。上海因艾网络技术有限公司没有对信息的传输量规定上限，但是它有判定会员的行为是否符合本酒店会员预订服务条款的要求和精神的保留权利，如果会员违背了会员预订服务条款的规定，则中断其会员预订服务的帐号。本网站所有的文章版权归原文作者和上海因艾网络技术有限公司共同所有，任何人需要转载网站内文章，必须征得原文作者或上海因艾网络技术有限公司授权。</p>
-            </li>
-            <li>10. 会员管理
-            <p>会员单独承担发布内容的责任。会员对会员预订服务的使用是根据所有适用于网站服务的地方法律、国家法律和国际法律标准的。会员必须遵循：
-            1）发布信息时必须符合中国有关法规。
-            2）使用会员预订服务不作非法用途。
-            3）不干扰或混乱网络服务。
-            4）遵守所有使用会员预订服务的网络协议、规定和程序。
-            5）会员预订服务是利用因特网发送和收取信息。所以，会员的行为指引是根据国家有关因特网的法规，政策和程序的。会员须承诺不传输任何非法的、骚扰性的、中伤他人的、辱骂性的、恐吓性的、伤害性的、庸俗的，淫秽等信息资料。另外，会员也不能传输任何教唆他人构成犯罪行为的资料；不能传输助长国内不利条件和涉及国家安全的资料；不能传输任何不符合当地法规、国家法律和国际法律的资料。未经许可而非法进入其它电脑系统是禁止的。若会员的行为不符合以上提到的服务条款，上海本网络科技有限公司将作出独立判断立即取消会员服务帐号。会员需对自己在会员预订服务中的行为承担法律责任。会员若在会员预订服务中散布和传播反动、色情或其他违反国家法律的信息，会员预订服务的系统记录有可能作为会员违反法律的证据。</p>
-            </li>
-            <li>11. 保障
-            <p>会员同意保障和维护上海因艾网络技术有限公司全体成员的利益，负责支付由会员使用超出服务范围引起的律师费用，违反服务条款的损害补偿费用，其它人使用会员的电脑、帐号和其它知识产权的追索费。</p>
-            </li>
-            <li>12. 结束服务
-            <P>会员或上海因艾网络技术有限公司可随时根据实际情况中断网站服务。上海因艾网络技术有限公司不需对任何个人或第三方负责而随时中断服务。会员若反对任何服务条款的建议或对后来的条款修改有异议，或对本酒店会员预订服务不满，会员可以有以下的追索权：
-            1）不再使用会员预订服务。
-            2）结束会员使用本酒店会员预订服务的资格。
-            3）通告上海因艾网络技术有限公司停止该会员的服务。
-            4）结束会员服务后，会员使用本酒店会员预订服务的权利马上终止。从那时起，上海因艾网络技术有限公司不再对会员承担任何义务。
-            5）结束会员服务后，如需恢复会员服务，您可免费申请恢复到结束服务前的会员级别，若有需要您也可按照本酒店会员说明中的方式获得高于结束会员级别时的会员资格。</p>
-            </li>
-            <li>13. 通告
-            <p>所有发给会员的通告都可通过电子邮件或常规的信件传送。上海因艾网络技术有限公司会通过邮件服务发报消息给会员，告诉他们服务条款的修改、服务变更、或其它重要事情。</p>
-            </li>
-            <li>14. 参与广告策划
-            <p>会员可在他们发表的信息中加入宣传资料或参与广告策划，但任何这类促销方法，包括运输货物、付款、服务、商业条件、担保及与广告有关的描述都只是在相应的会员和广告销售商之间发生。上海因艾网络技术有限公司不承担任何责任，本酒店会员预订服务没有义务为这类广告销售负任何一部分的责任。上海因艾网络技术有限公司在收到任何相关方的通知后，有权中止这类促销方法并不负任何的责任。</p>
-            </li>
-            <li>15. 邮件内容的所有权
-            <p>会员定义的内容包括：文字、软件、声音、相片、录象、图表；在广告中全部内容；电子邮件的全部内容；本酒店会员预订服务为会员提供的商业信息。所有这些内容均受版权、商标、标签和其它财产所有权法律的保护。所以，会员只能在上海因艾网络技术有限公司和广告商授权下才能使用这些内容，而不能擅自复制、再造这些内容、或创造与内容有关的派生产品。</p>
-            </li>
-            <li>16. 法律
-            <p>邮件服务条款要与该国的国家法律解释一致，包括法律条款中有争议抵触的内容。会员和上海因艾网络技术有限公司一致同意服从人民法院所有管辖。若有任何会员预订服务条款与法律相抵触，那这些条款将按尽可能接近的方法重新解释，而其它条款则保持对会员产生法律效力和影响。</p>
-            </li>
-            <li>17. 其他
-            <p>非上海因艾网络技术有限公司认可渠道获得的会员资格我公司不予承认。
-            温馨提示：本酒店会员预订服务实行酒店预订担保制度，如果预订会员违反本酒店预订条款的约定将会被扣除酒店会员卡内的相应积分，敬请预订会员在酒店预订前认真阅读本酒店会员预订服务各项条款及酒店预订的页面相关信息！</p>
-            </li>
-
-
+<div class="content-rule bs-text-black bs-bg-white">
+    <div class="content-headtitle">本宿用户协议</div>
+    <div class="content-title">一、服务条款</div>
+    <div class="content-text"> 本宿提供的服务将完全按照其发布的使用协议、服务条款和操作规则严格执行。为获得本宿服务，服务使用人（以下称"用户"）应当同意本协议的全部条款并按照页面上的提示完成全部的注册程序。
+    </div>
+    <div class="content-title">二、目的</div>
+    <div class="content-text"> 本协议是以规定用户使用本宿提供的服务时，本宿与用户间的权利、义务、服务条款等基本事宜为目的。
+    </div>
+    <div class="content-title">三、遵守法律及法律效力</div>
+    <div class="content-text"> 本服务使用协议在向用户公告后，开始提供服务或以其他方式向用户提供服务同时产生法律效力。
+    </div>
+    <div class="content-text"> 用户同意遵守《中华人民共和国保密法》、《计算机信息系统国际联网保密管理规定》、《中华人民共和国计算机信息系统安全保护条例》、《计算机信息网络国际联网安全保护管理办法》、《中华人民共和国计算机信息网络国际联网管理暂行规定》及其实施办法等相关法律法规的任何及所有的规定，并对用户以任何方式使用服务的任何行为及其结果承担全部责任。
+    </div>
+    <div class="content-text"> 在任何情况下，如果本宿合理地认为用户的任何行为，包括但不限于用户的任何言论和其他行为违反或可能违反上述法律和法规的任何规定，本宿可在任何时候不经任何事先通知终止向用户提供服务。
+    </div>
+    <div class="content-text"> 本宿可能不时的修改本协议的有关条款，一旦条款内容发生变动，本宿将会在相关的页面提示修改内容。在更改此使用服务协议时，本宿将说明更改内容的执行日期，变更理由等。且应同现行的使用服务协议一起，在改内容发生效力前7日内及发生效力前日向用户公告。
+    </div>
+    <div class="content-text"> 用户需仔细阅读使用服务协议更改内容，用户由于不知变更内容所带来的伤害，本宿一概不予负责。
+    </div>
+    <div class="content-text"> 如果不同意本宿对服务条款所做的修改，用户有权停止使用网络服务。如果用户继续使用网络服务，则视为用户接受服务条款的变动。
+    </div>
+    <div class="content-title">四、服务内容</div>
+    <div class="content-text"> 本宿服务的具体内容由本宿根据实际情况提供，本宿保留随时变更、中断或终止部分或全部本宿服务的权利。
+    </div>
+    <div class="content-title">五、用户的义务</div>
+    <div class="content-text"> 用户在申请使用本宿服务时，必须向本宿提供准确的个人资料，如个人资料有任何变动，必须及时更新。
+    </div>
+    <div class="content-text"> 用户注册成功后，本宿将给予每个用户一个用户帐号，该用户帐号由用户负责保管；用户应当对以其用户帐号进行的所有活动和事件负法律责任。
+    </div>
+    <div class="content-text"> 用户在使用本宿服务过程中，必须遵循以下原则：
+    </div>
+    <div class="content-text"> 遵守中国有关的法律和法规；
+    </div>
+    <div class="content-text"> 不得为任何非法目的而使用网络服务系统；
+    </div>
+    <div class="content-text"> 遵守所有与网络服务有关的网络协议、规定和程序；
+    </div>
+    <div class="content-text"> 不得利用本宿服务系统传输任何危害社会，侵蚀道德风尚，宣传不法宗教组织等内容；
+    </div>
+    <div class="content-text"> 不得利用本宿服务系统进行任何可能对互联网的正常运转造成不利影响的行为；
+    </div>
+    <div class="content-text"> 不得利用本宿服务系统上载、张贴或传送任何非法、有害、胁迫、滥用、骚扰、侵害、中伤、粗俗、猥亵、诽谤、侵害他人隐私、辱骂性的、恐吓性的、庸俗淫秽的及有害或种族歧视的或道德上令人不快的包括其他任何非法的信息资料；
+    </div>
+    <div class="content-text"> 不得利用本宿服务系统进行任何不利于本宿的行为；
+    </div>
+    <div class="content-text"> 如发现任何非法使用用户帐号或帐号出现安全漏洞的情况，应立即通告本宿。
+    </div>
+    <div class="content-title">六、本宿的权利及义务</div>
+    <div class="content-text"> 本宿除特殊情况外（例如：协助公安等相关部门调查破案等），致力于努力保护用户的个人资料不被外漏，且不得在未经本人的同意下向第三者提供用户的个人资料。
+    </div>
+    <div class="content-text"> 本宿根据提供服务的过程，经营上的变化，无需向用户得到同意即可更改，变更所提供服务的内容。
+    </div>
+    <div class="content-text"> 本宿在提供服务过程中，应及时解决用户提出的不满事宜，如在解决过程中确有难处，可以采取公开通知方式或向用户发送信息寻求解决办法。
+    </div>
+    <div class="content-text"> 本宿在下列情况下可以不通过向用户通知，直接删除其上载的内容：
+    </div>
+    <div class="content-text"> 有损于本宿，用户或第三者名誉的内容；
+    </div>
+    <div class="content-text"> 利用本宿服务系统上载、张贴或传送任何非法、有害、胁迫、滥用、骚扰、侵害、中伤、粗俗、猥亵、诽谤、侵害他人隐私、辱骂性的、恐吓性的、庸俗淫秽的及有害或种族歧视的或道德上令人不快的包括其他任何非法的内容；
+    </div>
+    <div class="content-text"> 侵害本宿或第三者的版权，著作权等内容；
+    </div>
+    <div class="content-text"> 存在与本宿提供的服务无关的内容；
+    </div>
+    <div class="content-text"> 无故盗用他人的ID(固有用户名)，姓名上载、张贴或传送任何内容及恶意更改，伪造他人上载内容。
+    </div>
+    <div class="content-title">七、知识产权声明</div>
+    <div class="content-text"> 本宿（www.bensue.com）所有的产品、技术与所有程序及页面（包括但不限于页面设计及内容）均属于知识产权，仅供个人学习、研究和欣赏，未经授权，任何人不得擅自使用，否则，将依法追究法律责任。
+    </div>
+    <div class="content-text"> 上海本宿网络科技有限公司拥有本宿内所有资料（包括但不限于本站所刊载的图片、视频、Flash等）的版权，（版权归属有特殊约定的，从其约定），未经授权，任何人不得擅自使用，否则，将依法追究法律责任。
+    </div>
+    <div class="content-title">八、免责声明</div>
+    <div class="content-text"> 任何人因使用本宿而可能遭致的意外及其造成的损失（包括因浏览本宿可能链接的第三方网站内容而感染电脑病毒），我们对此概不负责，亦不承担任何法律责任。
+    </div>
+    <div class="content-text"> 本宿禁止制作、复制、发布、传播等具有反动、色情、暴力、淫秽等内容的信息，一经发现，立即删除。若您因此触犯法律，我们对此不承担任何法律责任。
+    </div>
+    <div class="content-text"> 本宿用户自行上传或通过网络收集的资源，我们仅提供一个展示、交流的平台，不对其内容的准确性、真实性、正当性、合法性负责，也不承担任何法律责任。
+    </div>
+    <div class="content-text"> 任何单位或个人认为通过本宿网页内容可能涉嫌侵犯其著作权，应该及时向我们提出书面权利通知，并提供身份证明、权属证明及详细侵权情况证明。我们收到上述法律文件后，将会依法尽快处理。
+    </div>
+    <div class="content-title">九、服务变更、中断或终止</div>
+    <div class="content-text"> 如因系统维护或升级的需要而需暂停本宿服务，本宿将尽可能事先进行通告。
+    </div>
+    <div class="content-text"> 如发生下列任何一种情形，本宿有权随时中断或终止向用户提供本协议项下的本宿服务而无需通知用户：
+    </div>
+    <div class="content-text"> 用户提供的个人资料不真实；
+    </div>
+    <div class="content-text"> 用户违反本协议中规定的使用规则。
+    </div>
+    <div class="content-text"> 除前款所述情形外，本宿同时保留在不事先通知用户的情况下随时中断或终止部分或全部本宿服务的权利，对于所有服务的中断或终止而造成的任何损失，本宿无需对用户或任何第三方承担任何责任。
+    </div>
+    <div class="content-title">十、违约赔偿</div>
+    <div class="content-text"> 用户同意保障和维护本宿及其他用户的利益，如因用户违反有关法律、法规或本协议项下的任何条款而给本宿或任何其他第三者造成损失，用户同意承担由此造成的损害赔偿责任。
+    </div>
+    <div class="content-title">十一、修改协议</div>
+    <div class="content-text"> 本宿将可能不时的修改本协议的有关条款，一旦条款内容发生变动，本宿将会在相关的页面提示修改内容。
+    </div>
+    <div class="content-text"> 如果不同意本宿对服务条款所做的修改，用户有权停止使用本宿服务。如果用户继续使用本宿服务，则视为用户接受服务条款的变动。
+    </div>
+    <div class="content-title">十二、法律管辖</div>
+    <div class="content-text"> 本协议的订立、执行和解释及争议的解决均应适用中国法律。
+    </div>
+    <div class="content-text"> 如双方就本协议内容或其执行发生任何争议，双方应尽量友好协商解决；协商不成时，任何一方均可向本宿所在地的人民法院提起诉讼。
+    </div>
+    <div class="content-title">十三、其他规定</div>
+    <div class="content-text"> 本协议构成双方对本协议之约定事项及其他有关事宜的完整协议，除本协议规定的之外，未赋予本协议各方其他权利。
+    </div>
+    <div class="content-text"> 如本协议中的任何条款无论因何种原因完全或部分无效或不具有执行力，本协议的其余条款仍应有效并且有约束力。
     </div>
 </div>
