更换入住流程图

--- a/js/pages/order/payend.html
+++ b/js/pages/order/payend.html
@@ -40,6 +40,6 @@
 	</div> -->
 	<div class="mui-table-view-cell">
 		<h4>入住流程</h4>	
-		<img src="../img/flow.png" style="width:100%"/>
+		<img src="../img/flow.jpg" style="width:100%"/>
 	</div>
 </div>
