bug 修改：非会员隐藏钱包支付选项，折扣默认传空字符串

--- a/js/pages/card/buy.html
+++ b/js/pages/card/buy.html
@@ -23,7 +23,7 @@
 
         <section style="padding: 8px 0 10px 10px;">
             <div class="bs-text-red bs-text-larger" style="padding-top: 5px; padding-bottom: 25px;">¥{{@data.amount}}</div>
-            <div class="bs-text-smaller bs-text-51">预存 ¥{{@data.amount}} 即可升级成为{{@data.name}}会员</div>
+            <div class="bs-text-smaller bs-text-51">预存 ¥{{@data.amount}} 即可升级成为{{@data.name}}会员，享受以下优惠，有效期 12 个月。</div>
         </section>
         <img class="card-buy-img" :attr="{src:@data.discountUrl}" alt="">
         <img class="card-buy-img" :attr="{src:@data.awardUrl}" alt="">
