推广详情页面、购卡页面、发短信弹窗、换卡支付弹窗样式修改 换卡支付弹窗交互修改

--- a/js/pages/room/note.html
+++ b/js/pages/room/note.html
@@ -1,11 +1,11 @@
 <div class="content-rule">
     <div class="content-title">入住条款：</div>
     <div class="content-text">
-        1. 入住酒店时，请去前台办理入住手续。办理入住手续时，必须出示政府发出的有效身份证件。</div>
+    1. 入住酒店时，请去前台办理入住手续。办理入住手续时，必须出示政府发出的有效身份证件。</div>
     <div class="content-text">2. 全天房用户请于约定入住结束当天12点前退房，时租房用户，请于时租结束前退房。退房在微信公众号本宿（bensue2016）上完成即可。如需续住请提前联系前台。</div>
-    <div class="content-text">3. 全天房用户免费提供送房早餐，需要早餐请在微信公众号上呼叫早餐。</div>
-    <div class="content-text">4. 本酒店禁止携带宠物。亲友来访不能过夜，最晚不能超过12点。来访亲友请在前台登记。</div>
-    <div class="content-text">5. 请遵守国家法律法规，不要在酒店进行非法活动。</div>
-    <div class="content-text">6. 如需清洁请在微信上点击清洁按钮，服务人员将会到房打扫。</div>
-    <div class="content-text">7.如需其他服务请至联系前台。</div>
+    <!-- <div class="content-text">3. 全天房用户免费提供送房早餐，需要早餐请在微信公众号上呼叫早餐。</div> -->
+    <div class="content-text">3. 本酒店禁止携带宠物。亲友来访不能过夜，最晚不能超过12点。来访亲友请在前台登记。</div>
+    <div class="content-text">4. 请遵守国家法律法规，不要在酒店进行非法活动。</div>
+    <div class="content-text">5. 如需清洁请在微信上点击清洁按钮，服务人员将会到房打扫。</div>
+    <div class="content-text">6.如需其他服务请至联系前台。</div>
 </div>
