--- a/js/util/card-select.html
+++ b/js/util/card-select.html
@@ -1,39 +1,34 @@
 <style>
-    .pop-content{
-        height: 80vh;
-        margin-left: auto;
-        margin-right: auto;
-        transition: margin-top 100ms;
-        background: #fff;
-        overflow-y: auto;
-    }
+.pop-content {
+    height: 80vh;
+    margin-left: auto;
+    margin-right: auto;
+    transition: margin-top 100ms;
+    background: #fff;
+    overflow-y: auto;
+}
+.opacity04{
+    opacity: 0.4
+}
 </style>
 <div class="pop-content bs-text-51" ms-controller="selectCard">
-    <div style="padding: 20px;text-align: center;">
-        <div style="text-align: right;">
-            <img src="img/close.svg" style="width: 15px;" alt="" ms-click="close">
+    <div style="padding: 20px;">
+        <div class="bs-text-large" style="padding: 40px 0;"> 抱歉，无法完成付款，此卡可用余额不足。
         </div>
-
-        <div class="bs-text-large">卡内余额不足</div>
-        <div style="text-align: left;margin-top: 30px;">
-            <div class="bs-text-large">
-                更换支付会员卡
-            </div>
-            
-            <div style="margin-bottom: 10px;" ms-repeat="cardList"
-            ms-click="select($index, el.id)">
-                <div class="hiddenbox">
-                    <div class="check-icon unchecked" ms-class-1="unchecked:$index!=selectIndex" ms-class-2="checked:$index==selectIndex" style="position: absolute; right: 5px;"></div>
-                </div>
-                <span class="bs-text-normal bs-text-black">
-                    本宿{{el.userBuyCard.name}}
-                    <br> 
-                    <span class="bs-text-153 bs-text-small">
-                        可提现余额
-                        <span class="bs-text-red bs-text-smaller">¥{{el.cashAmount}}</span>
+        <div style="text-align: left;">
+            <div style="padding: 20px 0 15px 0;border-top: 1px solid #ccc;" ms-repeat="cardList" ms-click="select($index, el.id)">
+                <div class="bs-text-normal" ms-class="bs-text-153: el.cashAmount<(vmOrder.needAmount*vmOrder.discount)">
+                    使用本宿{{el.userBuyCard.name}}支付
+                    <br>
+                    <span class="bs-text-smaller">
+                        可用余额 &nbsp; ¥{{el.cashAmount}}
                     </span>
-                </span>
+                    <div style="display: inline-block;float: right;top: -9px;position: relative;">
+                        <img src="img/icon/right-arrow.svg" style="width: 16px;" alt="" ms-class="opacity04:el.cashAmount<(vmOrder.needAmount*vmOrder.discount)">
+                    </div>
+                </div>
             </div>
+            <div style="padding: 20px 0 15px 0;border-top: 1px solid #ccc;"></div>
         </div>
     </div>
 </div>
