--- a/js/pages/card/buy.html
+++ b/js/pages/card/buy.html
@@ -21,16 +21,27 @@
         </div>
         <img class="card-buy-img" :attr="{src:@data.imgUrl}" alt="">
 
-        <section style="padding: 8px 0 10px 10px;">
+        <section style="padding: 10px 0 5px 10px;">
             <div class="bs-text-red bs-text-larger" style="padding-top: 5px; padding-bottom: 25px;">¥{{@data.amount}}</div>
-            <div class="bs-text-smaller bs-text-51">预存 ¥{{@data.amount}} 即可升级成为{{@data.name}}会员，享受以下优惠，有效期 12 个月。</div>
+            <div class="bs-text-smaller bs-text-51" style="margin-bottom: 10px;">
+                只需预存 {{@data.amount}} 即可升级成为{{@data.name}}会员，有效期 12 个月。<br>{{@data.name}}会员将享受以下优惠：
+            </div>
+            <div class="card-buy-item">
+                <img class="card-buy-item-left" src='img/card/card-discount.png' style="width: 49px;height: 30px;" alt="">
+                <div class="card-buy-item-right bs-text-153 bs-text-smaller">凭此卡入住任意本宿酒店，即可享受{{@data.discount*10}}折优惠</div>
+            </div>
+            <div class="card-buy-item">
+                <img class="card-buy-item-left" src='img/card/card-award.png' style="width: 50px;height: 48px;" alt="">
+                <div class="card-buy-item-right bs-text-153 bs-text-smaller">每月返还预存金额{{@data.monthReturnAmount}}元, {{@data.totalReturnTimes}}个月返清本金。<br>用户可直接提现或在店内消费。</div>
+            </div>
+            <div class="card-buy-item">
+                <img class="card-buy-item-left" src='img/card/card-promotion.png' style="width: 50px;height: 48px;" alt="">
+                <div class="card-buy-item-right bs-text-153 bs-text-smaller">本宿{{@data.name}}会员免审核获得每月最高{{@data.monthShareTimes*@data.everyTimeAward}}元推广奖励金额。<br>奖励可直接提现或在店内消费。</div>
+            </div>
         </section>
-        <img class="card-buy-img" :attr="{src:@data.discountUrl}" alt="">
-        <img class="card-buy-img" :attr="{src:@data.awardUrl}" alt="">
-        <img class="card-buy-img" :attr="{src:@data.promoteUrl}" alt="">
     </div>
 
-    <section class="bs-text-small bs-text-51" style="padding: 20px 10px;">
+    <section class="bs-text-small bs-text-51" style="padding: 12px 10px 20px 10px;">
         <div style="margin-bottom: 15px;" :on-tap="@chooseType(2)">
             <div class="hiddenbox">
                 <div class="check-icon" :class="@payType == 2?'checked':'unchecked'" style="position: absolute; right: 0px;" :on-tap="@chooseType(2)"></div>
