--- a/js/pages/order/orderList.html
+++ b/js/pages/order/orderList.html
@@ -56,7 +56,7 @@
                 </span>
             </h5>
             <button class="bs-text-small" type="button" ms-click="goDetail(el.id)">{{showActionText(el.status)}}</button>
-            <span class="bs-text-large bs-text-red order-money">¥{{el.needAmount}}</span>
+            <span class="bs-text-large bs-text-red order-money" ms-if="el.needAmount>0">¥{{el.needAmount}}</span>
         </li>
     </ul>
     <span class="order-title bs-text-large bs-text-153" style="margin: 10px 0 0px 10px;">历史订单</span>
