--- a/js/util/code.html
+++ b/js/util/code.html
@@ -8,16 +8,15 @@
         overflow-y: auto;
     }
     .code-sendSMS {
-        width: 70px;
-        height: 30px;
+        width: 105px;
         background-color: #eee;
         margin-left: 10px;
         border: none;
         border-radius: 15px;
-        top: 8px;
     }
     .pop-content input {
         width: 100px;
+        font-size: 24px;
         display: inline-block;
         border: none;
         border-bottom: solid 1px #ccc;
@@ -34,12 +33,13 @@
         <div style="text-align: right;">
             <img src="img/close.svg" style="width: 15px;" alt="" :on-tap="@close">
         </div>
-        <div class="bs-text-large" style="text-align: left;">验证码已发送到：</div>
-        <div class="bs-text-x-larger" style="margin: 20px 0 15px 0;">{{mobile}}</div>
-        <div class="bs-text-large" style="text-align: left;margin-top: 30px;">请输入验证码：</div>
-        <div style="display: flex;justify-content: center;">
+        <div class="bs-text-xx-large" style="margin-top: 40px;">输入验证码</div>
+        <div class="bs-text-xx-larger bs-text-gold" style="margin: 20px 0 15px 0;">
             <input type="tel" :duplex="@code" style="padding-bottom: 0;">
-            <button class="code-sendSMS bs-text-smaller bs-text-gold" type="button" :attr="{disabled:@isDisabled}" :on-tap='@getCode'>{{@codeMsg}}</button>
+            </div>
+        <div style="display: flex;justify-content: center;align-items: center;">
+            <div class="bs-text-large">{{mobile}}</div>
+            <button class="code-sendSMS bs-text-large bs-text-gold" type="button" :attr="{disabled:@isDisabled}" :on-tap='@getCode'>{{@codeMsg}}</button>
         </div>
     </div>
     
